fix(component:message): message icon and content not align center when custom content
fix(component:message): message demo type error

docs(component:message): remove trailing space and keep clean code

fix(component:message): import/order

--- a/packages/components/message/style/index.less
+++ b/packages/components/message/style/index.less
@@ -11,7 +11,8 @@
   line-height: @message-line-height;
 
   &-content {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     min-width: @message-content-min-width;
     max-width: @message-content-max-width;
     padding: @message-content-padding-vertical @message-content-padding-horizontal;
